<resources>
    <string name="app_name">BestTraveler</string>
    <string name="loginButton">Login</string>
    <string name="signupButton">Signup</string>
    <string name="signUpQuestion">Don\'t have an account? Sign up here!</string>
    <string name="WelcomeText">Welcome, Please login!</string>
    <string name="WelcomeText2">Create Your Account</string>
    <string name="EmailHint">Email:</string>
    <string name="PasswordHint">Password</string>
    <string name="PasswordHintConfirm">Confirm Password</string>
    <string name="otherReviews">View Others\' Reviews</string>
    <string name="nextButton">NEXT</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_traveler">BEST TRAVELER</string>
    <string name="airline_information">Airline information</string>
    <string name="risk_information">Risk information</string>
    <string name="next">next</string>
    <string name="thanks_message">Thank you for using Best Traveler!</string>
    <string name="start_from">Start from:</string>
    <string name="to_destination">To Destination:</string>
    <string name="start_date">Start Date:</string>
    <string name="search">Search</string>


    <string name="reviewInputTitle">Your Review:</string>
    <string name="reviewHint">Review:</string>
    <string name="indexPageTitle">See Information About Your Trip!</string>
    <string name="submitButtonText">Submit Review</string>
    <string name="reviewPageTitle">Create A Review</string>
    <string name="startLocationTitle">Starting Location:</string>
    <string name="startLocationInputTitle">Location:</string>
    <string name="endLocationTitle">End Location:</string>
    <string name="dateTitle">Date:</string>
    <string name="reviewButtonText">Create a Review</string>
    <string name="weather_information">Weather Information</string>
    <string name="title2">username</string>
    <string name="userNameText">user email</string>
    <string name="reviewText">users\' review</string>
    <string name="locationFromUser">users visited area</string>
    <string name="reviewPageText">View Reviews</string>
    <string name="prevButton">PREV</string>
    <string name="visited">Visited:</string>
    <string name="userNameTitle">User:</string>
    <string name="anonString">Anonymous User</string>
    <string name="yourNameText">Your name (Optional)</string>
    <string name="usersNameRequest">Name</string>
</resources>