<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userNameText"
            android:textSize="30sp"
            android:contentDescription="@string/title2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/locationVisited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locationFromUser"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/actualReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reviewText"
            android:textSize="20sp"/>
    </LinearLayout>


</LinearLayout>