<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/WelcomeText2"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="241dp"
        android:layout_height="131dp"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="Best_Travel_Logo"
        android:src="@drawable/besttravel"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/EmailHint"
        android:autofillHints="Username"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:hint="@string/PasswordHint"
        android:inputType="textPassword"
        android:autofillHints="Password"/>

    <EditText
        android:id="@+id/passwordInputConfirm"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:hint="@string/PasswordHintConfirm"
        android:inputType="textPassword"
        android:autofillHints="Password"/>


    <Button
        android:id="@+id/signupButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginTop="50dp"
        android:text="@string/signupButton"
        android:layout_gravity="center"
        android:textSize="20sp" />

</GridLayout>