<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviewPageTitle"
        android:textSize="50sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/titleText">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/startLocationTitle"
            android:textSize="30sp"
            android:textColor="@color/titleText">
        </TextView>
        <EditText
            android:id="@+id/startLocationReview"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/start_from"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="103dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/startLocationTitle"
            android:textSize="30sp"
            android:textColor="@color/titleText">
        </TextView>

        <EditText
            android:id="@+id/endLocationReview"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/to_destination"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="195dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/startLocationTitle"
            android:textSize="30sp"
            android:textColor="@color/titleText">
        </TextView>

        <EditText
            android:id="@+id/travelDateReview"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/start_date"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="372dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/reviewSubmit"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="80dp"
        android:text="@string/submitButtonText"
        android:backgroundTint="@color/buttonColor"
        android:textSize="20sp"/>

</LinearLayout>