<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndexActivity">


    <LinearLayout
        android:id="@+id/linearLayoutIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@color/backgroundMainColor">

        <TextView
            android:id="@+id/textView"
            android:layout_width="247dp"
            android:textColor="@color/titleText"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/best_traveler"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.072" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="164dp"
            android:layout_height="88dp"
            android:layout_gravity="center"
            android:contentDescription="Best_Travel_Logo"
            android:src="@drawable/besttravel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"

            app:layout_constraintVertical_bias="0.035"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indexPageTitle"
        android:gravity="center"
        android:textColor="@color/titleText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/startLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutIndex">

    </TextView>


    <EditText
        android:id="@+id/ednLocation"
        android:layout_width="269dp"
        android:layout_height="62dp"
        android:autofillHints=""
        android:hint="@string/to_destination"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startLocation"
        app:layout_constraintVertical_bias="0.128"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/startLocation"
        android:layout_width="269dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:hint="@string/start_from"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutIndex"
        app:layout_constraintVertical_bias="0.307"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/travelDate"
        android:layout_width="269dp"
        android:layout_height="64dp"
        android:autofillHints="Date"
        android:hint="@string/start_date"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ednLocation"
        app:layout_constraintVertical_bias="0.16"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/reviewButton"
        android:layout_width="249dp"
        android:layout_height="59dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/reviewButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchbutton"
        app:layout_constraintVertical_bias="0.434" />

    <Button
        android:id="@+id/searchbutton"
        android:layout_width="249dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travelDate"
        app:layout_constraintVertical_bias="0.356" />

</androidx.constraintlayout.widget.ConstraintLayout>