<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="247dp"
        android:layout_height="61dp"

        android:text="@string/best_traveler"

        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="242dp"
        android:layout_height="58dp"
        android:contentDescription="Best_Travel_Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText"
        android:src="@drawable/besttravel" />

    <Button
        android:id="@+id/airlinebutton"
        android:layout_width="161dp"
        android:layout_height="67dp"
        android:text="@string/airline_information"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/riskbutton"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="136dp"
        android:text="@string/risk_information"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        app:layout_constraintVertical_bias="0.035" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"

        android:layout_width="335dp"
        android:layout_height="298dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/airlinebutton"
        app:layout_constraintVertical_bias="0.107" />

    <Button
        android:id="@+id/next"
        android:layout_width="266dp"
        android:layout_height="74dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
        app:layout_constraintVertical_bias="0.388" />


</androidx.constraintlayout.widget.ConstraintLayout>